# everdiff

./: AI_DEV.md  Cargo.toml  README.md  TUI.md  everdiff.config.yaml  foo.txt  foo.yaml  justfile
.claude/: settings.local.json
.github/workflows/: release.yml  update-formula.yml
examples/boolean-keys/: after.yaml  before.yaml
examples/many/after/: deployment.flux-engine-steam.yaml  networkpolicy.flux-engine-steam.yaml  service.flux-engine-steam.yaml
examples/many/before/: deployment.flux-engine-steam.yaml  networkpolicy.flux-engine-steam.yaml  service.flux-engine-steam.yaml
examples/multi/: after.yaml  before.yaml
examples/multi_v2/: after.yaml  before.yaml
examples/small/: mini-netpol-after.yaml  mini-netpol-before.yaml  other-person.yaml  person.yaml  pet.yaml
src/: config.rs  diff.rs  identifier.rs  lib.rs  main.rs  multidoc.rs  node.rs  path.rs  prepatch.rs  snippet.rs  source.rs  tui.rs
src/diff/: Cargo.toml
src/diff/src/: diff.rs  lib.rs  path.rs  source.rs
src/layout/: Cargo.toml
src/layout/src/: column.rs  content.rs  lib.rs  wrap.rs
src/line/: Cargo.toml
src/line/src/: lib.rs
src/main/: Cargo.toml
src/main/src/: config.rs  identifier.rs  main.rs
src/multidoc/: Cargo.toml
src/multidoc/src/: lib.rs  source.rs
src/snippet/: Cargo.toml
src/snippet/src/: inline_diff.rs  lib.rs  node.rs  snippet.rs  wrapping.rs
