[package]
name = "everdiff"
version = "0.1.0"
edition = "2024"
default-run = "everdiff"

[lib]
name = "everdiff"
path = "src/lib.rs"

[[bin]]
name = "everdiff"
path = "src/main.rs"

[dependencies]
ansi-width = "0.1.0"
anyhow = "1.0.94"
camino = "1.1.9"
bpaf = "0.9"
env_logger = "0.11.6"
itertools = "0.14.0"
hashlink = "0.10.0"
log = "0.4.22"
nom = "7.1.3"
notify = "7.0.0"
owo-colors = "4.1.0"

# saphyr and serde-saphyr are the underlying libraries that we use for parsing YAML
saphyr = { git = "https://github.com/saphyr-rs/saphyr", version = "0.0.6" }
serde-saphyr = "0.0.10"
# serde is still needed for places where we deserialize into structs
serde = { version = "1.0.228", features = ["derive"] }

similar = { version = "2.6.0", features = ["inline"] }
termsize = "0.1.9"

[dev-dependencies]
indoc = "2.0.5"
pretty_assertions = "1.4.1"
expect-test = "1.5.0"
test-log = "0.2.18"

# [patch.crates-io]
# saphyr-parser = { path = "../saphyr/parser"}
