[workspace]
resolver = "3"
members = ["src/diff", "src/multidoc", "src/snippet", "src/main", "src/line"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
# Internal crates
everdiff-diff = { path = "src/diff" }
everdiff-multidoc = { path = "src/multidoc" }
everdiff-snippet = { path = "src/snippet" }
everdiff-line = { path = "src/line" }

# External dependencies
ansi-width = "0.1.0"
anyhow = "1.0.94"
bpaf = "0.9"
camino = "1.1.9"
either = "1.15.0"
fern = { version = "0.7", default-features = false }
hashlink = "0.10.0"
log = "0.4"
nom = "8"
notify = { version = "8.2.0", default-features = false, features = ["macos_fsevent"] }
owo-colors = "4.1.0"
saphyr = { git = "https://github.com/saphyr-rs/saphyr", version = "0.0.6" }
serde = { version = "1.0.228" }
serde-saphyr = "0.0.10"
similar = { version = "2.6.0", features = ["inline"] }
terminal_size = { version = "0.4.3" }
unicode-width = "0.2"

# Dev dependencies
indoc = "2.0.5"
pretty_assertions = "1.4.1"
expect-test = "1.5.0"
test-log = "0.2.18"
