[package]
name = "everdiff-snippet"
version.workspace = true
edition.workspace = true

[dependencies]
everdiff-diff.workspace = true
everdiff-multidoc.workspace = true
everdiff-line.workspace = true
ansi-width.workspace = true
anyhow.workspace = true
camino.workspace = true
either.workspace = true
log.workspace = true
owo-colors.workspace = true
saphyr.workspace = true
terminal_size.workspace = true
unicode-width.workspace = true

[dev-dependencies]
indoc.workspace = true
pretty_assertions.workspace = true
expect-test.workspace = true
test-log.workspace = true
